--- a/cluster-home/operations/media/sonarr/helmrelease.yaml
+++ b/cluster-home/operations/media/sonarr/helmrelease.yaml
@@ -37,6 +37,8 @@ spec:
       interval: 5m
   values:
     defaultPodOptions:
+      annotations:
+        vpn/gluetun-inject: "true"
       securityContext:
         runAsUser: 568
         runAsGroup: 568
