Patch statefulsets as well

--- a/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
+++ b/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
@@ -13,6 +13,7 @@ spec:
           - resources:
               kinds:
                 - Deployment
+                - StatefulSet
       mutate:
         patchStrategicMerge:
           spec:
