Move backups to NAS closer to cluster

--- a/cluster-home/operations/flux-system/extras/cluster-config.yaml
+++ b/cluster-home/operations/flux-system/extras/cluster-config.yaml
@@ -13,6 +13,9 @@ data:
   NFS_SERVER_IP: "10.7.0.111"
   NFS_SERVER_PATH_MEDIA: "/mnt/tank/media"
   NFS_SERVER_PATH_PV: "/mnt/tank/pv"
+  FAST_NAS_SERVER_IP: "10.7.0.70"
+  FAST_NAS_PATH_MEDIA: "/mnt/joule-tank-01/media"
+  FAST_NAS_PATH_PV: "/mnt/joule-tank-01/pv"
   SVC_IP_BITTORRENT: "10.11.0.106"
   SVC_IP_BLOCKY: "10.11.0.53"
   SVC_IP_HASS: "10.11.0.42"
