Force backup jobs creation

--- a/cluster-home/operations/kube-tools/kyverno/policies/create-backup-jobs.yaml
+++ b/cluster-home/operations/kube-tools/kyverno/policies/create-backup-jobs.yaml
@@ -15,6 +15,7 @@ metadata:
       An optional label of "snapshot.home.arpa/ignoreAffinity" may be set on the PVC
       if the pod is guaranteed to not run during the time of this jobs execution
 spec:
+  generateExisting: true
   generateExistingOnPolicyUpdate: true
   rules:
     - name: create-snapshot-cronjob
