--- a/cluster-home/operations/media/sonarr-cz/pvc.yaml
+++ b/cluster-home/operations/media/sonarr-cz/pvc.yaml
@@ -5,7 +5,7 @@ metadata:
   name: sonarr-cz-config
   namespace: media
   labels:
-    snapshot.home.arpa/enabled: "true"
+    snapshot.home.arpa/enabled: "false"
     app.kubernetes.io/name: sonarr-cz
     app.kubernetes.io/instance: sonarr-cz
 spec:
