--- a/cluster-home/operations/media/sonarr/pvc.yaml
+++ b/cluster-home/operations/media/sonarr/pvc.yaml
@@ -5,13 +5,13 @@ metadata:
   name: sonarr-config
   namespace: media
   labels:
-    snapshot.home.arpa/enabled: "true"
+    snapshot.home.arpa/enabled: "false"
     app.kubernetes.io/name: sonarr
     app.kubernetes.io/instance: sonarr
 spec:
   storageClassName: openebs-jiva-csi-default
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   resources:
     requests:
       storage: 2Gi
