--- a/cluster-home/operations/media/prowlarr/pvc.yaml
+++ b/cluster-home/operations/media/prowlarr/pvc.yaml
@@ -5,13 +5,13 @@ metadata:
   name: prowlarr-config
   namespace: media
   labels:
-    snapshot.home.arpa/enabled: "false"
+    snapshot.home.arpa/enabled: "true"
     app.kubernetes.io/name: prowlarr
     app.kubernetes.io/instance: prowlarr
 spec:
   storageClassName: openebs-jiva-csi-default
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   resources:
     requests:
       storage: 512Mi
