--- a/cluster-home/operations/media/tdarr/pvc.yaml
+++ b/cluster-home/operations/media/tdarr/pvc.yaml
@@ -5,13 +5,13 @@ metadata:
   name: tdarr-config
   namespace: media
   labels:
-    snapshot.home.arpa/enabled: "false"
+    snapshot.home.arpa/enabled: "true"
     app.kubernetes.io/name: tdarr
     app.kubernetes.io/instance: tdarr
 spec:
   storageClassName: openebs-jiva-csi-default
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   resources:
     requests:
       storage: 512Mi
@@ -22,13 +22,13 @@ metadata:
   name: tdarr-data
   namespace: media
   labels:
-    snapshot.home.arpa/enabled: "false"
+    snapshot.home.arpa/enabled: "true"
     app.kubernetes.io/name: tdarr
     app.kubernetes.io/instance: tdarr
 spec:
   storageClassName: openebs-jiva-csi-default
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   resources:
     requests:
       storage: 512Mi
