--- a/cluster-home/operations/radio/mopidy/pvc.yaml
+++ b/cluster-home/operations/radio/mopidy/pvc.yaml
@@ -5,13 +5,13 @@ metadata:
   name: mopidy-data
   namespace: radio
   labels:
-    snapshot.home.arpa/enabled: "false"
+    snapshot.home.arpa/enabled: "true"
     app.kubernetes.io/name: mopidy
     app.kubernetes.io/instance: mopidy
 spec:
   storageClassName: openebs-jiva-csi-default
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   resources:
     requests:
       storage: 5Gi
