--- a/cluster-home/operations/smarthome/home-assistant/pvc.yaml
+++ b/cluster-home/operations/smarthome/home-assistant/pvc.yaml
@@ -5,13 +5,13 @@ metadata:
   name: hass-config
   namespace: smarthome
   labels:
-    snapshot.home.arpa/enabled: "false"
+    snapshot.home.arpa/enabled: "true"
     app.kubernetes.io/name: hass
     app.kubernetes.io/instance: hass
 spec:
   storageClassName: openebs-jiva-csi-default
   accessModes:
-    - ReadWriteOnce
+  - ReadWriteOnce
   resources:
     requests:
       storage: 2Gi
