Mount control share of NAS

--- a/cluster-home/operations/flux-system/extras/cluster-config.yaml
+++ b/cluster-home/operations/flux-system/extras/cluster-config.yaml
@@ -10,7 +10,8 @@ data:
   NETWORK_CIDR_K8S_SERVICE: "172.24.0.0/16"
   NETWORK_CIDR_K8S_SERVICE_EXTERNAL: "10.11.0.0/16"
   NETWORK_CIDR_HOST: "10.7.0.0/24"
-  NFS_SERVER_IP: "10.7.0.111"
+  NFS_SERVER_IP: "10.7.0.110"
+  NFS_SERVER_PATH_CONTROL: "/volume1/control"
   NFS_SERVER_PATH_MEDIA: "/mnt/tank/media"
   NFS_SERVER_PATH_PV: "/mnt/tank/pv"
   FAST_NAS_SERVER_IP: "10.7.0.70"
