--- a/cluster-home/operations/smarthome/home-assistant/pvc.yaml
+++ b/cluster-home/operations/smarthome/home-assistant/pvc.yaml
@@ -11,7 +11,43 @@ metadata:
 spec:
   storageClassName: openebs-jiva-csi-default
   accessModes:
-  - ReadWriteOnce
+    - ReadWriteOnce
   resources:
     requests:
       storage: 2Gi
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: syno-control
+spec:
+  storageClassName: syno-control
+  capacity:
+    storage: 1Mi
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  nfs:
+    server: ${NFS_SERVER_IP}
+    path: ${NFS_SERVER_PATH_CONTROL}
+  mountOptions:
+    - nfsvers=4
+    - tcp
+    - intr
+    - hard
+    - noatime
+    - nodiratime
+    - nolock
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: syno-control
+  namespace: smarthome
+spec:
+  storageClassName: syno-control
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 1Mi
