Fix communication with Shelly

--- a/cluster-home/operations/smarthome/home-assistant/helmrelease.yaml
+++ b/cluster-home/operations/smarthome/home-assistant/helmrelease.yaml
@@ -79,6 +79,8 @@ spec:
         ports:
           http:
             port: 8123
+          coiot:
+            port: 5683
       codeserver:
         type: ClusterIP
         controller: hass
