Fix Netatmo integration

--- a/cluster-home/operations/smarthome/home-assistant/helmrelease.yaml
+++ b/cluster-home/operations/smarthome/home-assistant/helmrelease.yaml
@@ -81,6 +81,8 @@ spec:
             port: 8123
           coiot:
             port: 5683
+          https:
+            port: 443
       codeserver:
         type: ClusterIP
         controller: hass
