--- a/cluster-home/operations/radio/mopidy/helmrelease.yaml
+++ b/cluster-home/operations/radio/mopidy/helmrelease.yaml
@@ -29,7 +29,7 @@ spec:
     spec:
       # renovate: registryUrl=https://charts.buvis.net
       chart: mopidy
-      version: 0.5.5
+      version: 0.5.6
       sourceRef:
         kind: HelmRepository
         name: buvis
@@ -48,7 +48,7 @@ spec:
         ports:
           http:
             port: 6680
-          zeroconf:
+          mpd:
             port: 6600
     ingress:
       main:
