Enable mopidy ports

--- a/cluster-home/operations/radio/mopidy/helmrelease.yaml
+++ b/cluster-home/operations/radio/mopidy/helmrelease.yaml
@@ -47,8 +47,10 @@ spec:
           lbipam.cilium.io/ips: ${SVC_IP_MOPIDY}
         ports:
           http:
+            enabled: true
             port: 6680
           mpd:
+            enabled: true
             port: 6600
     ingress:
       main:
