Fix path to media due to NAS replacement

--- a/cluster-home/operations/flux-system/extras/cluster-config.yaml
+++ b/cluster-home/operations/flux-system/extras/cluster-config.yaml
@@ -12,8 +12,7 @@ data:
   NETWORK_CIDR_HOST: "10.7.0.0/24"
   NFS_SERVER_IP: "10.7.0.110"
   NFS_SERVER_PATH_CONTROL: "/volume1/control"
-  NFS_SERVER_PATH_MEDIA: "/mnt/tank/media"
-  NFS_SERVER_PATH_PV: "/mnt/tank/pv"
+  NFS_SERVER_PATH_MEDIA: "/volume1/media"
   FAST_NAS_SERVER_IP: "10.7.0.70"
   FAST_NAS_PATH_MEDIA: "/mnt/joule-tank-01/media"
   FAST_NAS_PATH_PV: "/mnt/joule-tank-01/pv"
