Reserve IP for sabnzbd

--- a/cluster-home/operations/flux-system/extras/cluster-config.yaml
+++ b/cluster-home/operations/flux-system/extras/cluster-config.yaml
@@ -24,5 +24,6 @@ data:
   SVC_IP_JELLYSEERR: "10.11.0.105"
   SVC_IP_KOPIA: "10.11.0.44"
   SVC_IP_MOPIDY: "10.11.0.180"
+  SVC_IP_SABNZBD: "10.11.0.107"
   SVC_IP_SNAPSERVER: "10.11.0.190"
   TIMEZONE: "Europe/Berlin"
