Lock IP of sabnzbd

--- a/cluster-home/operations/media/sabnzbd/helmrelease.yaml
+++ b/cluster-home/operations/media/sabnzbd/helmrelease.yaml
@@ -107,6 +107,9 @@ spec:
     service:
       app:
         controller: sabnzbd
+        type: LoadBalancer
+        annotations:
+          lbipam.cilium.io/ips: ${SVC_IP_SABNZBD}
         ports:
           http:
             port: *port
