--- a/cluster-home/operations/flux-system/extras/cluster-config.yaml
+++ b/cluster-home/operations/flux-system/extras/cluster-config.yaml
@@ -10,7 +10,7 @@ data:
   NETWORK_CIDR_K8S_SERVICE: "172.24.0.0/16"
   NETWORK_CIDR_K8S_SERVICE_EXTERNAL: "10.11.0.0/16"
   NETWORK_CIDR_HOST: "10.7.0.0/24"
-  NETWORK_DNS: "172.24.0.10"
+  CLUSTER_DNS: "172.24.0.10"
   NFS_SERVER_IP: "10.7.0.110"
   NFS_SERVER_PATH_CONTROL: "/volume1/control"
   NFS_SERVER_PATH_MEDIA: "/volume1/media"
@@ -25,6 +25,7 @@ data:
   SVC_IP_JELLYSEERR: "10.11.0.105"
   SVC_IP_KOPIA: "10.11.0.44"
   SVC_IP_MOPIDY: "10.11.0.180"
+  SVC_IP_PROWLARR: "10.11.0.103"
   SVC_IP_SABNZBD: "10.11.0.107"
   SVC_IP_SNAPSERVER: "10.11.0.190"
   TIMEZONE: "Europe/Berlin"
