--- a/cluster-home/operations/media/prowlarr/helmrelease.yaml
+++ b/cluster-home/operations/media/prowlarr/helmrelease.yaml
@@ -70,6 +70,9 @@ spec:
     service:
       app:
         controller: prowlarr
+        type: LoadBalancer
+        annotations:
+          lbipam.cilium.io/ips: ${SVC_IP_PROWLARR}
         ports:
           http:
             port: *port
