Create app home directory

--- a/cluster-home/operations/media/beets/helmrelease.yaml
+++ b/cluster-home/operations/media/beets/helmrelease.yaml
@@ -68,6 +68,9 @@ spec:
           - path: /config/config.yaml
             readOnly: true
             subPath: config.yaml
+      config:
+        enabled: true
+        existingClaim: beets-config
       data:
         enabled: true
         existingClaim: beets-data
