--- a/cluster-home/operations/media/beets/pvc.yaml
+++ b/cluster-home/operations/media/beets/pvc.yaml
@@ -2,6 +2,23 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
+  name: beets-config
+  namespace: media
+  labels:
+    snapshot.home.arpa/enabled: "true"
+    app.kubernetes.io/name: beets
+    app.kubernetes.io/instance: beets
+spec:
+  storageClassName: openebs-jiva-csi-default
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 512Mi
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
   name: beets-data
   namespace: media
   labels:
