Fix skipping extra files

--- a/cluster-home/operations/media/beets/helmrelease.yaml
+++ b/cluster-home/operations/media/beets/helmrelease.yaml
@@ -130,7 +130,8 @@ spec:
               source_weight: 0.0
             extrafiles:
               patterns:
-                  all: '*.*'
+                  all:
+                    - '*.*'
             fetchart:
               cautious: true
               sources: itunes *
