--- a/cluster-home/operations/media/pv.yaml
+++ b/cluster-home/operations/media/pv.yaml
@@ -74,6 +74,42 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
+  name: nas-media-music-inbox
+spec:
+  storageClassName: nas-media-music-inbox
+  capacity:
+    storage: 1Mi
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  nfs:
+    server: ${FAST_NAS_SERVER_IP}
+    path: ${FAST_NAS_PATH_MEDIA}/music-inbox
+  mountOptions:
+    - nfsvers=4
+    - tcp
+    - intr
+    - hard
+    - noatime
+    - nodiratime
+    - nolock
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: nas-media-music-inbox
+  namespace: media
+spec:
+  storageClassName: nas-media-music-inbox
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 1Mi
+---
+apiVersion: v1
+kind: PersistentVolume
+metadata:
   name: nas-media-videos
 spec:
   storageClassName: nas-media-videos
