Mount incoming folder too

--- a/cluster-home/operations/media/vifm/helmrelease.yaml
+++ b/cluster-home/operations/media/vifm/helmrelease.yaml
@@ -45,6 +45,11 @@ spec:
             stdin: true
             tty: true
     persistence:
+      downloads:
+        enabled: true
+        existingClaim: nas-media-downloads
+        globalMounts:
+          - path: /media/downloads
       music:
         enabled: true
         existingClaim: nas-media-music
