Fetch genres from last.fm

--- a/cluster-home/operations/media/beets/helmrelease.yaml
+++ b/cluster-home/operations/media/beets/helmrelease.yaml
@@ -138,6 +138,8 @@ spec:
               sources: itunes *
             item_fields:
               multidisc: 1 if disctotal > 1 else 0
+            lastgenre:
+              canonical: yes
             lyrics:
               fallback: ''
               synced: true
