Fix /dev/net/tun not available in Talos > 1.8.0

--- a/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
+++ b/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
@@ -47,3 +47,10 @@ spec:
                       capabilities:
                         add:
                           - NET_ADMIN
+                    volumeMounts:
+                      - name: tun
+                        mountPath: /dev/net
+                  volumes:
+                    - name: tun
+                      hostPath:
+                        path: /dev/net
