--- a/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
+++ b/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     policies.kyverno.io/title: Add VPN client sidecar
 spec:
+  generateExisting: true
   rules:
     - name: add-vpn-sidecar
       match:
