Add rights to gluetun

--- a/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
+++ b/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
@@ -44,6 +44,8 @@ spec:
                       - name: TZ
                         value: ${TIMEZONE}
                     securityContext:
+                      allowPrivilegeEscalation: true
+                      runAsNonRoot: false
                       runAsUser: 0
                       capabilities:
                         add:
