--- a/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
+++ b/cluster-home/operations/kube-tools/kyverno/policies/add-vpn-sidecar.yaml
@@ -48,9 +48,7 @@ spec:
                       - name: TZ
                         value: ${TIMEZONE}
                     securityContext:
-                      allowPrivilegeEscalation: true
-                      runAsNonRoot: false
-                      runAsUser: 0
+                      privileged: true
                       capabilities:
                         add:
                           - NET_ADMIN
