Workaround allowSnippetAnnotations: true being ignored https://github.com/kubernetes/ingress-nginx/issues/12618

--- a/cluster-home/operations/kube-tools/ingress-nginx/helmrelease.yaml
+++ b/cluster-home/operations/kube-tools/ingress-nginx/helmrelease.yaml
@@ -29,6 +29,8 @@ spec:
     controller:
       allowSnippetAnnotations: true
       hostNetwork: false
+      config:
+        annotations-risk-level: Critical
       service:
         type: LoadBalancer
         annotations:
