--- a/cluster-home/operations/flux-system/sources/bitnami.yaml
+++ b/cluster-home/operations/flux-system/sources/bitnami.yaml
@@ -5,6 +5,6 @@ metadata:
   name: bitnami
   namespace: flux-system
 spec:
-  interval: 10m
-  url: https://charts.bitnami.com/bitnami
-  timeout: 3m
+  type: oci
+  interval: 5m
+  url: oci://registry-1.docker.io/bitnamicharts
