--- a/cluster-home/operations/kube-tools/cert-manager/helmrelease.yaml
+++ b/cluster-home/operations/kube-tools/cert-manager/helmrelease.yaml
@@ -33,3 +33,5 @@ spec:
       servicemonitor:
         enabled: false
         prometheusInstance: monitoring
+    extraArgs:
+    - --acme-http01-solver-nameservers=1.1.1.1:53,9.9.9.9:53
