Enable redis for authentik as it turned out, it is a dependency...

--- a/cluster-home/operations/security/authentik/helmrelease.yaml
+++ b/cluster-home/operations/security/authentik/helmrelease.yaml
@@ -52,7 +52,7 @@ spec:
       auth:
         password: ${SECRET_AUTHENTIK_DB_PASSWORD}
     redis:
-      enabled: false
+      enabled: true
     authentik:
       secret_key: ${SECRET_AUTHENTIK_SECRET_KEY}
       postgresql:
