Try local storage for authentik's redis

--- a/cluster-home/operations/security/authentik/helmrelease.yaml
+++ b/cluster-home/operations/security/authentik/helmrelease.yaml
@@ -53,6 +53,8 @@ spec:
         password: ${SECRET_AUTHENTIK_DB_PASSWORD}
     redis:
       enabled: true
+      global:
+        storageClass: openebs-hostpath
     authentik:
       secret_key: ${SECRET_AUTHENTIK_SECRET_KEY}
       postgresql:
