--- a/cluster-home/operations/security/authentik/helmrelease.yaml
+++ b/cluster-home/operations/security/authentik/helmrelease.yaml
@@ -53,8 +53,16 @@ spec:
         password: ${SECRET_AUTHENTIK_DB_PASSWORD}
     redis:
       enabled: true
-      global:
-        defaultStorageClass: openebs-hostpath
+      # global:
+      #   defaultStorageClass: openebs-hostpath
+      persistence:
+        enabled: false
+      redis:
+        configmap: |
+          # Disable AOF and RDB persistence as we keep everything in memory only, see https://redis.io/topics/persistence
+          appendonly no
+          # Disable RDB persistence, AOF persistence already disabled above.
+          save ""
     authentik:
       secret_key: ${SECRET_AUTHENTIK_SECRET_KEY}
       postgresql:
