--- a/cluster-home/operations/security/authentik/helmrelease.yaml
+++ b/cluster-home/operations/security/authentik/helmrelease.yaml
@@ -53,8 +53,8 @@ spec:
         password: ${SECRET_AUTHENTIK_DB_PASSWORD}
     redis:
       enabled: true
-      # global:
-      #   defaultStorageClass: openebs-hostpath
+      global:
+        defaultStorageClass: openebs-hostpath
       persistence:
         enabled: false
       redis:
