Try fixing redis still writing AOF to disk

--- a/cluster-home/operations/security/authentik/helmrelease.yaml
+++ b/cluster-home/operations/security/authentik/helmrelease.yaml
@@ -53,15 +53,15 @@ spec:
         password: ${SECRET_AUTHENTIK_DB_PASSWORD}
     redis:
       enabled: true
+      commonConfiguration: |-
+        appendonly no
+        save ""
       global:
         defaultStorageClass: openebs-hostpath
       persistence:
         enabled: false
       redis:
         useAOFPersistence: "no"
-        configmap: |
-          # Disable RDB persistence completely
-          save ""
     authentik:
       secret_key: ${SECRET_AUTHENTIK_SECRET_KEY}
       postgresql:
