Wait for monitoring

--- a/cluster-home/operations/network/blocky/helmrelease.yaml
+++ b/cluster-home/operations/network/blocky/helmrelease.yaml
@@ -5,6 +5,9 @@ metadata:
   name: blocky
   namespace: network
 spec:
+  dependsOn:
+    - name: kube-prometheus-stack
+      namespace: monitoring
   interval: 5m
   install:
     timeout: 15m
