--- a/cluster-home/operations/storage/minio/helmrelease.yaml
+++ b/cluster-home/operations/storage/minio/helmrelease.yaml
@@ -5,6 +5,9 @@ metadata:
   name: minio
   namespace: storage
 spec:
+  dependsOn:
+    - name: kube-prometheus-stack
+      namespace: monitoring
   interval: 5m
   chart:
     spec:
