--- a/cluster-home/operations/security/authentik/helmrelease.yaml
+++ b/cluster-home/operations/security/authentik/helmrelease.yaml
@@ -10,6 +10,10 @@ spec:
       namespace: kube-tools
     - name: cert-manager
       namespace: kube-tools
+    - name: kyverno
+      namespace: kube-tools
+    - name: openebs
+      namespace: storage
   interval: 5m
   install:
     timeout: 25m
