Enable monitoring because now we depend on it

--- a/cluster-home/operations/network/blocky/helmrelease.yaml
+++ b/cluster-home/operations/network/blocky/helmrelease.yaml
@@ -89,7 +89,7 @@ spec:
             protocol: UDP
     serviceMonitor:
       main:
-        enabled: false
+        enabled: true
         serviceName: blocky
         endpoints:
           - port: http
