--- a/cluster-home/operations/storage/minio/helmrelease.yaml
+++ b/cluster-home/operations/storage/minio/helmrelease.yaml
@@ -58,7 +58,7 @@ spec:
         memory: 1500Mi
     metrics:
       serviceMonitor:
-        enabled: false
+        enabled: true
     buckets:
       - name: thanos
         policy: public
