Mount cache to node only

--- a/cluster-home/operations/media/tdarr/helmrelease.yaml
+++ b/cluster-home/operations/media/tdarr/helmrelease.yaml
@@ -83,8 +83,12 @@ spec:
       cache:
         enabled: true
         existingClaim: tdarr-cache
-        globalMounts:
-          - path: /cache
+        globalMounts: []
+        advancedMounts:
+          node:
+            node:
+              - path: /cache
+                readOnly: false
     service:
       tdarr:
         controller: server
